JEP 404, 450, 478